--- a/style.css
+++ b/style.css
@@ -63,3 +63,8 @@ button:hover{
 .grid-item:hover{
     opacity: 80%;
 }
+
+#foot{
+    color: white;
+    text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.4)
+}
