--- a/style.css
+++ b/style.css
@@ -52,7 +52,8 @@ button:hover{
     width: 500px;
     height: 500px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.4);
-    grid-template-columns: auto auto auto;
+    grid-template-columns: repeat(3, auto);
+    grid-template-rows: repeat(3, auto);
 }
 
 .grid-item{
