--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 }
 
 main{
-    padding: 100px 0;
+    padding: 20px 0 0 0;
     text-align: center;
     position: fixed;
     top: 0;
@@ -49,8 +49,8 @@ button:hover{
 .sketch{
     margin: auto;
     display: grid;
-    width: 500px;
-    height: 500px;
+    width: 600px;
+    height: 600px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.4);
     grid-template-columns: repeat(3, auto);
     grid-template-rows: repeat(3, auto);
